# mahjong-trainer

./: .gitignore  README.md  app.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.base.json  vercel.json
apps/web/: next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  siteData.ts
apps/web/app/components/: Badges.tsx  SiteChrome.tsx  SiteSections.tsx
apps/web/app/learn/: page.tsx
apps/web/app/learn/[slug]/: page.tsx
apps/web/app/rules/: page.tsx
apps/web/app/tools/: page.tsx
apps/web/app/trainer/: page.tsx
apps/web/app/training/: page.tsx
mahjong/: __init__.py  analyzer.py  fu.py  hand_decomposer.py  melds.py  problems.py  score_calculator.py  scoring.py  shanten.py  tile_images.py  tiles.py  ukeire_max.py  yaku.py
mahjong/chinitsu/: __init__.py  evaluator.py  generator.py  parser.py  question_bank.py  types.py  waits.py
tests/: test_analyzer.py  test_chinitsu.py  test_fu.py  test_hand_decomposer.py  test_melds.py  test_problems.py  test_score_calculator.py  test_scoring.py  test_shanten.py  test_tile_images.py  test_tiles.py  test_ukeire_max.py  test_wait_quality.py  test_yaku.py
