[project]
name = "mahjong-ukeire-trainer"
version = "0.1.0"
description = "A small Streamlit app for comparing iishanten discard candidates and ukeire."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
